# commonx

./: README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: run_test.yml
commonx/dto/: mictlanx_api.py  xolo.py
commonx/enums/: mictlanx_api.py
commonx/errors/: __init__.py
commonx/helpers/: __init__.py
commonx/models/: __init__.py  mictlanx_api.py  xolo.py
src/commonx/dto/: mictlanx_api.py  xolo.py
src/commonx/enums/: mictlanx_api.py
src/commonx/errors/: __init__.py
src/commonx/models/: mictlanx_api.py  xolo.py
tests/: test_error.py  test_error_optional_fastapi.py  test_models.py  test_users_model.py
