[project]
name = "commonx"
version = "0.0.1"
description = ""
authors = [
    {name = "Ignacio Castillo",email = "ignacio.bcastillo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "pydantic[email] (>=2.12.5,<3.0.0)",
    "option (>=2.1.0,<3.0.0)",
    "pytest (==8.4.2)",
    "humanfriendly (>=10.0,<11.0)",
]

[tool.poetry]
packages = [{include = "commonx"}]


[tool.poetry.group.dev.dependencies]
coverage = "^7.13.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
