[project]
name = "commonx"
version = "0.0.1a4"
description = "This contains common code for all the projects in the jub organization."
authors = [
    {name = "Ignacio Castillo",email = "ignacio.bcastillo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "pydantic[email] (>=2.12.5,<3.0.0)",
    "option (>=2.1.0,<3.0.0)",
    "humanfriendly (>=10.0,<11.0)",
]

[project.optional-dependencies]
fastapi = [
    "fastapi",
]

[tool.poetry]
packages = [{include = "commonx"}]


[tool.poetry.group.dev.dependencies]
coverage = "^7.13.1"
pytest = "^9.0.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
